--- a/AccountService.Api/Dockerfile
+++ b/AccountService.Api/Dockerfile
@@ -1,32 +1,18 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-# For more information, please see https://aka.ms/containercompat
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
-
-# This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
+# Use .NET 8 SDK to build the app
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["AccountService.Api/AccountService.Api.csproj", "AccountService.Api/"]
-RUN dotnet restore "./AccountService.Api/AccountService.Api.csproj"
+
+# Copy and restore project files
+COPY ["AccountService.Api.csproj", "./"]
+RUN dotnet restore "AccountService.Api.csproj"
+
+# Copy the remaining files and build
 COPY . .
-WORKDIR "/src/AccountService.Api"
-RUN dotnet build "./AccountService.Api.csproj" -c %BUILD_CONFIGURATION% -o /app/build
+RUN dotnet publish "AccountService.Api.csproj" -c Release -o /app/publish
 
-# This stage is used to publish the service project to be copied to the final stage
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./AccountService.Api.csproj" -c %BUILD_CONFIGURATION% -o /app/publish /p:UseAppHost=false
-
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
-FROM base AS final
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
+EXPOSE 80
 ENTRYPOINT ["dotnet", "AccountService.Api.dll"]
