--- a/AccountService.Api/appsettings.json
+++ b/AccountService.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Development": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver;Database=AccountDb;User=sa;Password=Your_password123;"
+  }
 }
