--- a/ClientService.Api/appsettings.json
+++ b/ClientService.Api/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver;Database=ClientDb;User=sa;Password=Your_password123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Development": true,
   "AllowedHosts": "*"
 }
