feat: Add migration

--- a/AccountService.Api/appsettings.json
+++ b/AccountService.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "Development": true,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=AccountDb;User=sa;Password=Your_password123;"
+    "DefaultConnection": "Server=sqlserver;Database=AccountDb;User=sa;Password=Your_password123;TrustServerCertificate=True;"
   }
 }
