--- a/ClientService.Api/appsettings.json
+++ b/ClientService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=ClientDb;User=sa;Password=Your_password123;"
+    "DefaultConnection": "Server=sqlserver;Database=ClientDb;User=sa;Password=Your_password123;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
