--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "8081:8081"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=AccountDb;User=sa;Password=Your_password123;
+      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=AccountDb;User=sa;Password=Your_password123;TrustServerCertificate=True;
     depends_on:
       sqlserver:
         condition: service_healthy
@@ -51,7 +51,7 @@ services:
       - "8091:8081"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=ClientDb;User=sa;Password=Your_password123;
+      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=ClientDb;User=sa;Password=Your_password123;TrustServerCertificate=True;
     depends_on:
       sqlserver:
         condition: service_healthy
